# PackageKit-Qt

./: .gitignore  AUTHORS  CMakeLists.txt  MAINTAINERS  NEWS  README  README.md  RELEASE  config.h.in  release.sh
.github/workflows/: build-test.yml  main.yml
src/: CMakeLists.txt  Details  Offline  PackageKitQt  bitfield.cpp  bitfield.h  common.h  daemon.cpp  daemon.h  daemonprivate.cpp  daemonprivate.h  details.cpp  details.h  networkmanagermonitor.cpp  networkmanagermonitor.h  offline.cpp  offline.h  offline_p.h  packagekit-qt2.pc.in  packagekit-qt5-0.pc.in  packagekitqt.pc.in  packagekitqt4.pc.in  packagekitqt5.pc.in  packagekitqt6.pc.in  packagekitqt_global.h  qpk-version.h.in  transaction.cpp  transaction.h  transactionprivate.cpp  transactionprivate.h
src/modules/: CMakeLists.txt  packagekit-qt-config.cmake.in  packagekit-qt2-config.cmake.in
tests/ci/: Dockerfile-debian  Dockerfile-fedora  build-and-test.sh  build_and_test.sh
